--- a/HowToStartTestingWithNUnit.Tests/HowToStartTestingWithNUnit.Tests.csproj
+++ b/HowToStartTestingWithNUnit.Tests/HowToStartTestingWithNUnit.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{08202D1B-15BB-4218-91A9-761E53FB9252}</ProjectGuid>
+    <ProjectGuid>{C5B0ACF4-8CC0-4BCD-B918-30197BDDCC8C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HowToStartTestingWithNUnit</RootNamespace>
-    <AssemblyName>HowToStartTestingWithNUnit</AssemblyName>
+    <RootNamespace>HowToStartTestingWithNUnit.Tests</RootNamespace>
+    <AssemblyName>HowToStartTestingWithNUnit.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=3.9.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,8 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MathUtils.cs" />
+    <Compile Include="MathUtilsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HowToStartTestingWithNUnit\HowToStartTestingWithNUnit.csproj">
+      <Project>{08202d1b-15bb-4218-91a9-761e53fb9252}</Project>
+      <Name>HowToStartTestingWithNUnit</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
